--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@tailwindcss/forms": "^0.5.2",
 		"@tailwindcss/typography": "^0.5.1",
 		"@webtides/element-js": "^0.4.2",
 		"@webtides/layouts": "^0.6.1",
@@ -20,6 +21,8 @@
 		"cssnano": "^5.0.17",
 		"diskdb": "^0.1.17",
 		"express-session": "^1.17.3",
+		"passport": "^0.6.0",
+		"passport-local": "^1.0.0",
 		"postcss": "^8.4.6",
 		"postcss-import": "^14.0.2",
 		"postcss-nested": "^5.0.6",
