uses svg helper isntead of inline svgs

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"cssnano": "^5.0.17",
 		"diskdb": "^0.1.17",
 		"express-session": "^1.17.3",
+		"heroicons": "^1.0.6",
 		"passport": "^0.6.0",
 		"passport-local": "^1.0.0",
 		"postcss": "^8.4.6",
