--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 	},
 	"keywords": [],
 	"author": "",
-	"license": "ISC",
+	"license": "MIT",
 	"dependencies": {
 		"@prisma/client": "^3.14.0",
 		"@tailwindcss/forms": "^0.5.2",
