--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,13 @@ NODE_ENV=development
 SERVER_PORT=3000
 SESSION_SECRET=3h5f0ft2mfhldn3b6h2b4b1b3b5b3b2b4b6b
 DATABASE_URL="file:content.db"
+
+# mail
+MAIL_MAILER=smtp
+MAIL_HOST=smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USERNAME=null
+MAIL_PASSWORD=null
+MAIL_ENCRYPTION=null
+MAIL_FROM_ADDRESS=null
+MAIL_FROM_NAME=null
