--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"diskdb": "^0.1.17",
 		"express-session": "^1.17.3",
 		"heroicons": "^1.0.6",
+		"nodemailer": "^6.7.7",
 		"passport": "^0.6.0",
 		"passport-local": "^1.0.0",
 		"postcss": "^8.4.6",
