--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
 		"autoprefixer": "^10.4.2",
 		"cookie-parser": "^1.4.6",
 		"cssnano": "^5.0.17",
+		"csv-stringify": "^6.2.0",
 		"diskdb": "^0.1.17",
 		"express-session": "^1.17.3",
 		"heroicons": "^1.0.6",
+		"node-schedule": "^2.1.0",
 		"nodemailer": "^6.7.7",
 		"passport": "^0.6.0",
 		"passport-local": "^1.0.0",
