--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"diskdb": "^0.1.17",
 		"express-session": "^1.17.3",
 		"heroicons": "^1.0.6",
+		"method-override": "^3.0.0",
 		"node-schedule": "^2.1.0",
 		"nodemailer": "^6.7.7",
 		"passport": "^0.6.0",
