--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"main": "index.js",
 	"type": "module",
 	"scripts": {
-		"test": "cross-env DATABASE_URL=file:cypress.sqlite cypress open",
+		"test:e2e": "cross-env DATABASE_URL=file:cypress.sqlite cypress open",
+		"test:unit": "web-test-runner tests/web-test-runner/**/*.test.js --node-resolve",
 		"test:migrate": "cross-env DATABASE_URL=file:cypress.sqlite npx prisma db push --force-reset --accept-data-loss",
 		"dev": "npx luna --dev",
 		"dev:test": "cross-env DATABASE_URL=file:cypress.sqlite npx luna --dev",
@@ -46,6 +47,8 @@
 	},
 	"devDependencies": {
 		"@faker-js/faker": "^7.2.0",
+		"@open-wc/testing": "^3.1.6",
+		"@web/test-runner": "^0.14.0",
 		"@webtides/luna-cli": "0.11.0-dev.12",
 		"cross-env": "^7.0.3",
 		"cypress": "^10.4.0",
