--- a/.github/workflows/npm-run-test.yml
+++ b/.github/workflows/npm-run-test.yml
@@ -2,11 +2,11 @@ name: NPM run test
 
 on:
   push:
-#    branches:
-#      - main
-#  pull_request:
-#    branches:
-#      - main
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
   test:
