--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
 		"@prisma/client": "^3.14.0",
 		"@tailwindcss/forms": "^0.5.2",
 		"@tailwindcss/typography": "^0.5.1",
-		"@webtides/element-js": "^0.4.2",
+		"@webtides/element-js": "0.5.0",
 		"@webtides/layouts": "^0.6.1",
-		"@webtides/luna-js": "0.11.0-dev.13",
-		"@webtides/luna-renderer": "0.11.0-dev.13",
+		"@webtides/luna-js": "0.11.0-dev.15",
+		"@webtides/luna-renderer": "0.11.0-dev.15",
 		"autoprefixer": "^10.4.2",
 		"cookie-parser": "^1.4.6",
 		"cssnano": "^5.0.17",
