uses latest and stable element-js version

--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
 		"@prisma/client": "^3.14.0",
 		"@tailwindcss/forms": "^0.5.2",
 		"@tailwindcss/typography": "^0.5.1",
-		"@webtides/element-js": "0.5.0",
-		"@webtides/layouts": "^0.6.1",
-		"@webtides/luna-js": "0.11.0-dev.15",
-		"@webtides/luna-renderer": "0.11.0-dev.15",
+		"@webtides/element-js": "1.1.0",
+		"@webtides/layouts": "^0.7.0",
+		"@webtides/luna-js": "0.12.4",
+		"@webtides/luna-renderer": "0.12.4",
 		"autoprefixer": "^10.4.2",
 		"cookie-parser": "^1.4.6",
 		"cssnano": "^5.0.17",
@@ -39,11 +39,11 @@
 		"nodemailer": "^6.7.7",
 		"passport": "^0.6.0",
 		"passport-local": "^1.0.0",
-		"postcss": "^8.4.6",
-		"postcss-import": "^14.0.2",
-		"postcss-nested": "^5.0.6",
+		"postcss": "^8.4.38",
+		"postcss-import": "^16.1.0",
+		"postcss-nested": "^6.0.1",
 		"swagger-ui-express": "^4.5.0",
-		"tailwindcss": "^3.0.19",
+		"tailwindcss": "^3.4.4",
 		"validatorjs": "^3.22.1",
 		"yamljs": "^0.3.0"
 	},
@@ -52,7 +52,7 @@
 		"@faker-js/faker": "^7.2.0",
 		"@open-wc/testing": "^3.1.6",
 		"@web/test-runner": "^0.14.0",
-		"@webtides/luna-cli": "0.11.0-dev.12",
+		"@webtides/luna-cli": "0.12.1",
 		"cross-env": "^7.0.3",
 		"cypress": "^10.4.0",
 		"encoding": "^0.1.13",
